@@ -1,3 +1,11 @@
+2014-03-20  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
+
+	Submitted by Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>
+	Fix for bug #38516: Missing TWI and UCSR1D definitions for ATmega16/32 U4
+	* include/avr/iom16u4.h: Add TWBR,TWSR,TWAR,TWDR,TWCR,TWAMR and UCSR1D
+	register definitions.
+	* include/avr/iom32u4.h: Add UCSR1D regiter and bit definitions.
+
 2014-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/avr/iom256rfr2.h (PCMSK0_struct): Add missing definition
